<?xml version="1.0"?>
<package>
  <name>blue_helpers</name>
  <version>0.0.0</version>
  <description>The blue_helpers package contains helpful tools for running the Blue robot arm</description>

  <maintainer email="phil80301@berkeley.edu">Philipp Wu</maintainer>

  <license>MIT</license>

  <author email="brentyi@berkeley.edu">Brent Yi</author>
  <author email="phil80301@berkeley.edu">Philipp Wu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>blue_controller_manager</exec_depend>
  <exec_depend>blue_msgs</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>tf2_web_republisher</exec_depend>
  <exec_depend>effort_controllers</exec_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <run_depend>moveit_core</run_depend>
  <build_depend>moveit_core</build_depend>

  <run_depend>moveit_ros_planning_interface</run_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>

  <run_depend>moveit_perception</run_depend>
  <build_depend>moveit_perception</build_depend>

  <run_depend>moveit_visual_tools</run_depend>
  <build_depend>moveit_visual_tools</build_depend>
</package>
